syntax = "proto3";

package com.huawei.fit.heartbeat;

option optimize_for = LITE_RUNTIME;
option java_package = "com.huawei.fit.heartbeat.proto";
option java_outer_classname = "HeartbeatCommonProto";

import "com/huawei/fit/registry/registryCommon.proto";


message BeatInfo {
  string sceneType = 1;
  int64 interval = 2;
  int64 aliveTime = 3;
  int64 initDelay = 4;
  string callbackFitId = 5;
}

message SubscribeBeatInfo {
  string sceneType = 1;
  string callbackFitId = 2;
  string mode = 3;
}

message HeartbeatEvent {
  string sceneType = 1;
  string eventType = 2;
  com.huawei.fit.registry.Address address = 3;
}